bug: Fix layout issue in restaurant page

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 
+$small-screen-media: 'screen and (max-width: 470px)';
 /* ====================== Navigation ====================== */
 header {
   position: fixed;
@@ -18,6 +19,10 @@ nav {
 nav h1 {
   margin: auto;
   line-height: $header-height;
+
+  @media #{$small-screen-media} {
+    line-height: 70px;
+  }
 }
 
 nav h1 a {
@@ -26,6 +31,10 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
+
+  @media #{$small-screen-media} {
+    font-size: 8pt;
+  }
 }
 
 /* ====================== Map ====================== */
