--- a/styles/main.scss
+++ b/styles/main.scss
@@ -66,6 +66,7 @@ $card-border-radius: 5px;
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   display: flex;
+  justify-content: center;
   flex-flow: row wrap;
   background-color: #f3f3f3;
   list-style: outside none none;
